@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.5'
+    id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -38,32 +38,60 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.566'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
 //    implementation 'com.auth0:java-jwt:4.2.1'
 //    implementation 'jakarta.platform:jakarta.jakartaee-api:8.0.0'
 
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'   // swagger
+//    implementation ('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'){
+//        exclude group: 'org.springframework', module: 'spring-web'
+//    }   // swagger
     implementation 'com.google.code.gson:gson:2.8.9'    //json을 받을 수 있는 객체
     implementation 'com.github.scribejava:scribejava-core:2.8.1'
 
-
-
-
-    implementation 'com.google.guava:guava:30.1-jre'// kafka Map 안전성
+    implementation 'com.google.guava:guava:32.1.3-jre'// kafka Map 안전성
     testImplementation 'org.springframework.kafka:spring-kafka-test' //채팅 관련 kafka
     implementation 'org.springframework.kafka:spring-kafka' //채팅 관련 kafka
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'//채팅관련 redis
-    implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'jakarta.validation:jakarta.validation-api:2.1.1'
     implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
 
     // 머신러닝
     // compileOnly 'org.pytorch:pytorch_java_only:1.12.2'
     implementation 'nz.ac.waikato.cms.weka:weka-stable:3.8.6'
+    // https://mvnrepository.com/artifact/org.apache.spark/spark-sql
+    implementation('org.apache.spark:spark-sql_2.13:3.5.0') {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+    }
+    // https://mvnrepository.com/artifact/org.apache.spark/spark-core
+    implementation('org.apache.spark:spark-core_2.13:3.5.0') {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+    }
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.17.0'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation 'mysql:mysql-connector-java:8.0.28'
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += [
+            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += [
+            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
 }
